--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             margin-top: 20vh;
             font-size: 3em;
             text-shadow: 2px 2px 4px #000;
+            color: #ffff00
         }
         .toggle-button {
             margin-top: 50px;
